kubernetes/ingressClass.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingressClass
spec:
  controller: ingress.k8s.aws/alb
