kubernetes/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: development

---
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: v1
kind: Namespace
metadata:
  name: production
