kubernetes/deploy_frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: development
  labels:
    app: frontend
spec:
  replicas: 4
  selector:
    matchLabels: 
      app: expense-frontend
  template:
    metadata:
      labels:
        app: expense-frontend
    spec:
      containers:
        - name: frontend-expense
          image: kholha/expency-frontend:latest
          ports:
            - containerPort: 3000
