kubernetes/mongo-ebs.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-ebs
  namespace: default
  labels:
    app.kubernetes.io/team: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mongo-ebs
  serviceName: mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mongo-ebs
        app.kubernetes.io/team: database
    spec:
      containers:
        - name: mongo
          image: "mongo"
          args:
            - "--ignore-db-dir=lost+found"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/mongo
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 30Gi
