kubernetes/service_frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: development
spec:
  type: ClusterIP
  selector: 
    app: expense-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
